# containerized-data-importer

./: .bazelrc  .fossa.yml  .gitignore  .golangci.yml  .test.swp  .travis.yml  BUILD.bazel  CONTRIBUTING.md  Dockerfile  Makefile  OWNERS  OWNERS_ALIASES  README.md  SECURITY.md  WORKSPACE  build-cdi-importer-image.sh  build-cdi-importer.sh  doc.go  glide.yaml  go.mod  go.sum  go.work  go.work.sum  manual-release-notes  manual-release-notes.txt  old.Makefile  repo.yaml  stdci.yaml  tools.go  version
cmd/: main.go  (+5 more)
cmd/cdi-apiserver/: BUILD.bazel  apiserver.go
cmd/cdi-cloner/: BUILD.bazel  clone-source.go  clone-source_suite_test.go  clone-source_test.go  cloner_startup.sh  clonertarget.go  clonertarget_suite_test.go  clonertarget_test.go  script.sh
cmd/cdi-controller/: BUILD.bazel  controller.go  leaderelection.go
cmd/cdi-importer/: BUILD.bazel  cdi-source-update-poller  importer.go
cmd/cdi-operator/: BUILD.bazel  operator.go
cmd/cdi-uploadproxy/: BUILD.bazel  uploadproxy.go
cmd/cdi-uploadserver/: BUILD.bazel  uploadserver.go
cmd/openstack-populator/: BUILD.bazel  openstack-populator.go  openstack-populator_test.go  openstack_populator_suite_test.go
cmd/ovirt-populator/: BUILD.bazel  ovirt-populator.go
pkg/apiserver/: BUILD.bazel  apiserver.go  apiserver_suite_test.go  apiserver_test.go  auth-config.go  auth-config_test.go  authorizer.go  authorizer_test.go  util.go
pkg/controller/: BUILD.bazel  cert.go  clone-controller.go  clone-controller_test.go  config-controller.go  config-controller_test.go  controller.go  controller_suite_test.go  controller_test.go  csi-clone-controller.go  csi-clone-controller_test.go  dataimportcron-conditions.go  dataimportcron-controller.go  dataimportcron-controller_test.go  dataimportcron-format-handlers.go  datasource-controller.go  datasource-controller_test.go  datavolume-conditions.go  datavolume-conditions_test.go  datavolume-controller.go  datavolume-controller_test.go  feature-gates.go  feature-gates_test.go  import-controller.go  import-controller_test.go  import_controller_ginkgo_suite_test.go  import_controller_ginkgo_test.go  keystore.go  runtime-util.go  smart-clone-controller.go  smart-clone-controller_test.go  storageprofile-controller.go  storageprofile-controller_test.go  upload-controller.go  upload-controller_test.go  util.go  util_test.go
pkg/image/: BUILD.bazel  decompress.go  directio.go  exec.go  exec_test.go  filefmt.go  filefmt_test.go  magic.go  magic_test.go  nbdkit.go  nbdkit_test.go  prlimit.go  prlimit_test.go  qemu.go  qemu_format_stream.go  qemu_suite_test.go  qemu_test.go  skopeo.go  skopeo_test.go  transport.go  transport_test.go  validate.go  validate_test.go  validation_suite_test.go  validation_test.go
pkg/importer/: BUILD.bazel  checksum.go  checksum_test.go  data-processor.go  data-processor_test.go  dataFormat.go  dataStream.go  dataStreamFactory.go  dataStreamSelector.go  dataStream_test.go  datastream_ginkgo_test.go  datastream_suite_test.go  errors.go  file.go  file_test.go  format-readers.go  format-readers_test.go  gcs-datasource.go  gcs-datasource_test.go  http-datasource.go  http-datasource_test.go  httpDataStreamer.go  imageio-datasource.go  imageio-datasource_test.go  importer_suite_test.go  importer_test.go  registry-datasource.go  registry-datasource_test.go  registryDataStreamer.go  registry_test.go  s3-datasource.go  s3-datasource_test.go  s3DataStreamer.go  transport.go  transport_test.go  upload-datasource.go  upload-datasource_test.go  util.go  util_test.go  vddk-common.go  (+7 more)
pkg/keys/: BUILD.bazel  keystore.go  keystore_suite_test.go  keystore_test.go
pkg/mesh/: BUILD.bazel  istio.go  linkerd.go  mesh.go  mesh_suite_test.go  mesh_test.go
pkg/operator/: BUILD.bazel  api.go  controller.go
pkg/storagecapabilities/: BUILD.bazel  storagecapabilities.go
pkg/system/: BUILD.bazel  prlimit.go  prlimit_suite_test.go  prlimit_test.go
pkg/token/: BUILD.bazel  token.go  token_suite_test.go  token_test.go
pkg/uploadproxy/: BUILD.bazel  uploadproxy.go  uploadproxy_suite_test.go  uploadproxy_test.go
pkg/uploadserver/: BUILD.bazel  uploadserver.go  uploadserver_suite_test.go  uploadserver_test.go
pkg/util/: BUILD.bazel  errors.go  file.go  file_format.go  file_test.go  prlimit.go  prlimit_test.go  util.go  util_suite_test.go  util_test.go
tests/: BUILD.bazel  adopt-volume_test.go  alpha_test.go  api_validation_test.go  apiserver_test.go  badserver_test.go  basic_sanity_test.go  cdiconfig_test.go  certrotation_test.go  clone-populator_test.go  clone_test.go  cloner_test.go  csiclone_test.go  dataimportcron_test.go  datasource_test.go  datavolume_test.go  exec_util.go  explain_test.go  external_population_test.go  framework.go  imageio-inventory.go  import_proxy_test.go  import_test.go  leaderelection_test.go  local_volume_test.go  monitoring_test.go  operator_test.go  pvc_utils.go  rbac_test.go  smartclone_test.go  static-volume_test.go  static_volume_test.go  tests_suite_test.go  transfer_test.go  transport_test.go  upgrade_test.go  upload_test.go  utils.go  webhook_test.go
tests/framework/: BUILD.bazel  exec_util.go  framework.go  kubectl.go  nfs-utils.go  nodeplacement.go  pod.go  prometheus.go  pv.go  pvc.go  vddk.go
tests/images/: archive.tar  cirros-snapshot1.qcow2  cirros-snapshot2.qcow2  fake.ova  fs-overhead.qcow2  gcs-secret.txt  qcow2-but-other-extension.tar
tests/manifests/: datavolume.yaml  dv0SizePVC.yaml  dvAlphaUpload.yaml  dvBlankArchive.yaml  dvBlankInvalidContentType.yaml  dvBothSourceAndSourceRef.yaml  dvImageio.yaml  dvInvalidAccessModes.yaml  dvInvalidContentType.yaml  dvInvalidSourcePVC.yaml  dvInvalidStorageSizeQuantity.yaml  dvInvalidURL.yaml  dvLeadingZero.yaml  dvMissingCompleteSpec.yaml  dvMissingPVCAccessModes.yaml  dvMissingPVCSize.yaml  dvMissingPVCSpec.yaml  dvMissingRequestSpec.yaml  dvMissingResourceSpec.yaml  dvMissingSource.yaml  dvMissingSource2.yaml  dvMissingSourceHttp.yaml  dvMultiSource.yaml  dvMultipleAccessModes.yaml  dvNoMetaData.yaml  dvNoName.yaml  dvVddk.yaml  ingressNetworkApigroup.yaml  ingressNoHttp.yaml  tokenAlpha.yaml  (+2 more)
(+911 files in other folders)
