load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@bazel_gazelle//:def.bzl", "gazelle")
load("@bazel_tools//tools/python:toolchain.bzl", "py_runtime_pair")

py_runtime(
    name = "python2_runtime",
    interpreter_path = "/usr/bin/python2",
    python_version = "PY2",
)

py_runtime(
    name = "python3_runtime",
    interpreter_path = "/usr/bin/python3",
    python_version = "PY3",
)

py_runtime_pair(
    name = "python_runtimes",
    py2_runtime = ":python2_runtime",
    py3_runtime = ":python3_runtime",
)

toolchain(
    name = "python_toolchain",
    toolchain = ":python_runtimes",
    toolchain_type = "@bazel_tools//tools/python:toolchain_type",
)

# gazelle:prefix kubevirt.io/containerized-data-importer
gazelle(name = "gazelle")

go_library(
    name = "go_default_library",
    srcs = ["doc.go"],
    importpath = "kubevirt.io/containerized-data-importer",
    visibility = ["//visibility:public"],
)

load(
    "@io_bazel_rules_docker//container:container.bzl",
    "container_bundle",
    "container_image",
    "container_push",
)

container_bundle(
    name = "test-container-images",
    images = {
        "$(container_prefix)/cdi-func-test-bad-webserver:$(container_tag)": "//tools/cdi-func-test-bad-webserver:cdi-func-test-bad-webserver-image",
        "$(container_prefix)/cdi-func-test-proxy:$(container_tag)": "//tools/cdi-func-test-proxy:cdi-func-test-proxy-image",
        "$(container_prefix)/cdi-func-test-file-host-init:$(container_tag)": "//tools/cdi-func-test-file-host-init:cdi-func-test-file-host-init-image",
        "$(container_prefix)/cdi-func-test-file-host-http:$(container_tag)": "//tools/cdi-func-test-file-host-init:cdi-func-test-file-host-http-image",
        "$(container_prefix)/cdi-func-test-registry-init:$(container_tag)": "//tools/cdi-func-test-registry-init:cdi-func-test-registry-init-image",
        "$(container_prefix)/cdi-func-test-registry-populate:$(container_tag)": "//tools/cdi-func-test-registry-init:cdi-func-test-registry-populate-image",
        "$(container_prefix)/cdi-func-test-registry:$(container_tag)": "//tools/cdi-func-test-registry-init:cdi-func-test-registry-image",
        "$(container_prefix)/imageio-init:$(container_tag)": "//tools/imageio-init:imageio-init-image",
        "$(container_prefix)/loop-back-lvm:$(container_tag)": "//tools/loop-back-lvm:loop-back-lvm-image",
        "$(container_prefix)/vcenter-simulator:$(container_tag)": "//tools/vddk-test:vcenter-simulator",
        "$(container_prefix)/vddk-init:$(container_tag)": "//tools/vddk-init:vddk-init-image",
        "$(container_prefix)/vddk-test:$(container_tag)": "//tools/vddk-test:vddk-test-image",
    },
)

load("@io_bazel_rules_docker//contrib:push-all.bzl", "docker_push")

docker_push(
    name = "push-test-images",
    bundle = ":test-container-images",
)

container_push(
    name = "push-cdi-operator",
    format = "Docker",
    image = "//cmd/cdi-operator:cdi-operator-image",
    registry = "$(container_prefix)",
    repository = "cdi-operator",
    tag = "$(container_tag)",
)

container_push(
    name = "push-cdi-controller",
    format = "Docker",
    image = "//cmd/cdi-controller:cdi-controller-image",
    registry = "$(container_prefix)",
    repository = "cdi-controller",
    tag = "$(container_tag)",
)

container_push(
    name = "push-cdi-apiserver",
    format = "Docker",
    image = "//cmd/cdi-apiserver:cdi-apiserver-image",
    registry = "$(container_prefix)",
    repository = "cdi-apiserver",
    tag = "$(container_tag)",
)

container_push(
    name = "push-cdi-cloner",
    format = "Docker",
    image = "//cmd/cdi-cloner:cdi-cloner-image",
    registry = "$(container_prefix)",
    repository = "cdi-cloner",
    tag = "$(container_tag)",
)

container_push(
    name = "push-cdi-importer",
    format = "Docker",
    image = "//cmd/cdi-importer:cdi-importer-image",
    registry = "$(container_prefix)",
    repository = "cdi-importer",
    tag = "$(container_tag)",
)

container_push(
    name = "push-cdi-uploadproxy",
    format = "Docker",
    image = "//cmd/cdi-uploadproxy:cdi-uploadproxy-image",
    registry = "$(container_prefix)",
    repository = "cdi-uploadproxy",
    tag = "$(container_tag)",
)

container_push(
    name = "push-cdi-uploadserver",
    format = "Docker",
    image = "//cmd/cdi-uploadserver:cdi-uploadserver-image",
    registry = "$(container_prefix)",
    repository = "cdi-uploadserver",
    tag = "$(container_tag)",
)

filegroup(
    name = "test-images",
    srcs = [
        "//tests:images/tinyCore.iso",
        "//tests:images/archive.tar",
        "//tests:images/cirros-qcow2.img",
        "//tests:images/cirros.raw",
	"//tests:images/cirros-large-virtual-size.raw.xz",
	"//tests:images/cirros-large-virtual-size.qcow2",
	"//tests:images/cirros-large-physical-size.raw.xz",
	"//tests:images/cirros-large-physical-size.qcow2",
    ],
    visibility = ["//visibility:public"],
)

filegroup(
    name = "test-invalid-images",
    srcs = [
        "//tests:images/invalid_qcow_images/invalid-qcow-backing-file.img",
        "//tests:images/invalid_qcow_images/invalid-qcow-large-json.img",
        "//tests:images/invalid_qcow_images/invalid-qcow-large-memory.img",
        "//tests:images/invalid_qcow_images/invalid-qcow-large-size.img",
    ],
    visibility = ["//visibility:public"],
)
