load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@io_bazel_rules_docker//container:container.bzl", "container_image")
load("@bazel_gazelle//:def.bzl", "gazelle")
load("@bazel_tools//tools/python:toolchain.bzl", "py_runtime_pair")
load("@bazeldnf//:def.bzl", "bazeldnf")
load("@bazel_tools//tools/build_defs/pkg:pkg.bzl", "pkg_tar")

py_runtime(
    name = "python2_runtime",
    interpreter_path = "/usr/bin/python2",
    python_version = "PY2",
)

py_runtime(
    name = "python3_runtime",
    interpreter_path = "/usr/bin/python3",
    python_version = "PY3",
)

py_runtime_pair(
    name = "python_runtimes",
    py2_runtime = ":python2_runtime",
    py3_runtime = ":python3_runtime",
)

toolchain(
    name = "python_toolchain",
    toolchain = ":python_runtimes",
    toolchain_type = "@bazel_tools//tools/python:toolchain_type",
)

# gazelle:prefix kubevirt.io/containerized-data-importer
gazelle(name = "gazelle")

bazeldnf(name = "bazeldnf")

go_library(
    name = "go_default_library",
    srcs = ["doc.go"],
    importpath = "kubevirt.io/containerized-data-importer",
    visibility = ["//visibility:public"],
)

load(
    "@io_bazel_rules_docker//container:container.bzl",
    "container_bundle",
    "container_image",
    "container_push",
)

load("@io_bazel_rules_docker//contrib:push-all.bzl", "docker_push")

container_push(
    name = "push-cdi-func-test-bad-webserver",
    format = "Docker",
    image = "//tools/cdi-func-test-bad-webserver:cdi-func-test-bad-webserver-image",
    registry = "$(container_prefix)",
    repository = "cdi-func-test-bad-webserver",
    tag = "$(container_tag)",
)

container_push(
    name = "push-cdi-func-test-proxy",
    format = "Docker",
    image = "//tools/cdi-func-test-proxy:cdi-func-test-proxy-image",
    registry = "$(container_prefix)",
    repository = "cdi-func-test-proxy",
    tag = "$(container_tag)",
)

container_push(
    name = "push-cdi-func-test-sample-populator",
    format = "Docker",
    image = "//tools/cdi-func-test-sample-populator:cdi-func-test-sample-populator-image",
    registry = "$(container_prefix)",
    repository = "cdi-func-test-sample-populator",
    tag = "$(container_tag)",
)

container_push(
    name = "push-cdi-func-test-file-host-init",
    format = "Docker",
    image = "//tools/cdi-func-test-file-host-init:cdi-func-test-file-host-init-image",
    registry = "$(container_prefix)",
    repository = "cdi-func-test-file-host-init",
    tag = "$(container_tag)",
)

container_push(
    name = "push-cdi-func-test-file-host-http",
    format = "Docker",
    image = "//tools/cdi-func-test-file-host-init:cdi-func-test-file-host-http-image",
    registry = "$(container_prefix)",
    repository = "cdi-func-test-file-host-http",
    tag = "$(container_tag)",
)

container_push(
    name = "push-cdi-func-test-registry-init",
    format = "Docker",
    image = "//tools/cdi-func-test-registry-init:cdi-func-test-registry-init-image",
    registry = "$(container_prefix)",
    repository = "cdi-func-test-registry-init",
    tag = "$(container_tag)",
)

container_push(
    name = "push-cdi-func-test-registry-populate",
    format = "Docker",
    image = "//tools/cdi-func-test-registry-init:cdi-func-test-registry-populate-image",
    registry = "$(container_prefix)",
    repository = "cdi-func-test-registry-populate",
    tag = "$(container_tag)",
)

container_push(
    name = "push-cdi-func-test-registry",
    format = "Docker",
    image = "//tools/cdi-func-test-registry-init:cdi-func-test-registry-image",
    registry = "$(container_prefix)",
    repository = "cdi-func-test-registry",
    tag = "$(container_tag)",
)

container_push(
    name = "push-imageio-init",
    format = "Docker",
    image = "//tools/imageio-init:imageio-init-image",
    registry = "$(container_prefix)",
    repository = "imageio-init",
    tag = "$(container_tag)",
)

container_push(
    name = "push-vcenter-simulator",
    format = "Docker",
    image = "//tools/vddk-test:vcenter-simulator",
    registry = "$(container_prefix)",
    repository = "vcenter-simulator",
    tag = "$(container_tag)",
)

container_push(
    name = "push-vddk-init",
    format = "Docker",
    image = "//tools/vddk-init:vddk-init-image",
    registry = "$(container_prefix)",
    repository = "vddk-init",
    tag = "$(container_tag)",
)

container_push(
    name = "push-vddk-test",
    format = "Docker",
    image = "//tools/vddk-test:vddk-test-image",
    registry = "$(container_prefix)",
    repository = "vddk-test",
    tag = "$(container_tag)",
)

container_push(
    name = "push-cdi-func-test-tinycore",
    format = "Docker",
    image = "//tests:cdi-func-test-tinycore",
    registry = "$(container_prefix)",
    repository = "cdi-func-test-tinycore",
    tag = "$(container_tag)",
)

container_push(
    name = "push-cdi-func-test-imageio",
    format = "Docker",
    image = "//tools/image-io:cdi-func-test-imageio-image",
    registry = "$(container_prefix)",
    repository = "cdi-func-test-imageio",
    tag = "$(container_tag)",
)

container_push(
    name = "push-cdi-func-test-cirros-qcow2",
    format = "Docker",
    image = "//tests:cdi-func-test-cirros-qcow2",
    registry = "$(container_prefix)",
    repository = "cdi-func-test-cirros-qcow2",
    tag = "$(container_tag)",
)

container_push(
    name = "push-cdi-operator",
    format = "Docker",
    image = "//cmd/cdi-operator:cdi-operator-image",
    registry = "$(container_prefix)",
    repository = "cdi-operator",
    tag = "$(container_tag)",
)

container_push(
    name = "push-cdi-controller",
    format = "Docker",
    image = "//cmd/cdi-controller:cdi-controller-image",
    registry = "$(container_prefix)",
    repository = "cdi-controller",
    tag = "$(container_tag)",
)

container_push(
    name = "push-cdi-apiserver",
    format = "Docker",
    image = "//cmd/cdi-apiserver:cdi-apiserver-image",
    registry = "$(container_prefix)",
    repository = "cdi-apiserver",
    tag = "$(container_tag)",
)

container_push(
    name = "push-cdi-cloner",
    format = "Docker",
    image = "//cmd/cdi-cloner:cdi-cloner-image",
    registry = "$(container_prefix)",
    repository = "cdi-cloner",
    tag = "$(container_tag)",
)

container_push(
    name = "push-cdi-importer",
    format = "Docker",
    image = "//cmd/cdi-importer:cdi-importer-image",
    registry = "$(container_prefix)",
    repository = "cdi-importer",
    tag = "$(container_tag)",
)

container_push(
    name = "push-cdi-uploadproxy",
    format = "Docker",
    image = "//cmd/cdi-uploadproxy:cdi-uploadproxy-image",
    registry = "$(container_prefix)",
    repository = "cdi-uploadproxy",
    tag = "$(container_tag)",
)

container_push(
    name = "push-cdi-uploadserver",
    format = "Docker",
    image = "//cmd/cdi-uploadserver:cdi-uploadserver-image",
    registry = "$(container_prefix)",
    repository = "cdi-uploadserver",
    tag = "$(container_tag)",
)

filegroup(
    name = "test-images",
    srcs = [
        "//tests:images/tinyCore.iso",
        "//tests:images/tinyCore.vdi",
        "//tests:images/archive.tar",
        "//tests:images/cirros-qcow2.img",
        "//tests:images/cirros.raw",
	"//tests:images/cirros-large-virtual-size.raw.xz",
	"//tests:images/cirros-large-virtual-size.qcow2",
	"//tests:images/cirros-large-physical-size.raw.xz",
	"//tests:images/cirros-large-physical-size.qcow2",
	"//tests:images/cirros-snapshot1.qcow2",
	"//tests:images/cirros-snapshot2.qcow2",
    ],
    visibility = ["//visibility:public"],
)

filegroup(
    name = "test-invalid-images",
    srcs = [
        "//tests:images/invalid_qcow_images/invalid-qcow-large-memory.img",
    ],
    visibility = ["//visibility:public"],
)

container_image(
    name = "testimage_base",
    tars = select({
        "@io_bazel_rules_go//go/platform:linux_s390x": [
            "//rpm:testimage_s390x",
        ],
        "@io_bazel_rules_go//go/platform:linux_arm64": [
            "//rpm:testimage_aarch64",
        ],
        "//conditions:default": [
            "//rpm:testimage_x86_64",
        ],
    }),
    visibility = ["//visibility:public"],
)

container_image(
    name = "centos_base",
    tars = select({
        "@io_bazel_rules_go//go/platform:linux_s390x": [
            "//rpm:centos_base_s390x",
        ],
        "@io_bazel_rules_go//go/platform:linux_arm64": [
            "//rpm:centos_base_aarch64",
        ],
        "//conditions:default": [
            "//rpm:centos_base_x86_64",
        ],
    }),
    visibility = ["//visibility:public"],
)

genrule(
    name = "ca_anchors",
    outs = ["tls-ca-bundle.pem"],
    cmd = "/usr/bin/p11-kit extract --format=pem-bundle --filter=ca-anchors --overwrite --comment --purpose server-auth $@",
)

genrule(
    name = "build-ginkgo",
    srcs = [
        "//vendor/github.com/onsi/ginkgo/v2/ginkgo",
    ],
    outs = ["ginkgo-copier"],
    cmd = "echo '#!/bin/sh\n\ncp -f $(SRCS) $$1' > \"$@\"",
    executable = 1,
)

pkg_tar(
    name = "ca_anchors_tar",
    srcs = [":ca_anchors"],
    package_dir = "/etc/pki/ca-trust/extracted/pem",
    visibility = ["//visibility:public"],
)
