load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@bazel_gazelle//:def.bzl", "gazelle")
load("@bazel_tools//tools/python:toolchain.bzl", "py_runtime_pair")
load("@bazeldnf//:def.bzl", "bazeldnf")
load("@rules_pkg//:pkg.bzl", "pkg_tar")
load("@rules_oci//oci:defs.bzl", "oci_push", "oci_image")

py_runtime(
    name = "python2_runtime",
    interpreter_path = "/usr/bin/python2",
    python_version = "PY2",
)

py_runtime(
    name = "python3_runtime",
    interpreter_path = "/usr/bin/python3",
    python_version = "PY3",
)

py_runtime_pair(
    name = "python_runtimes",
    py2_runtime = ":python2_runtime",
    py3_runtime = ":python3_runtime",
)

toolchain(
    name = "python_toolchain",
    toolchain = ":python_runtimes",
    toolchain_type = "@bazel_tools//tools/python:toolchain_type",
)

# gazelle:prefix kubevirt.io/containerized-data-importer
gazelle(name = "gazelle")

bazeldnf(name = "bazeldnf")

alias(
    name = "buildozer",
    actual = "@buildifier_prebuilt//:buildozer",
)

go_library(
    name = "go_default_library",
    srcs = ["doc.go"],
    importpath = "kubevirt.io/containerized-data-importer",
    visibility = ["//visibility:public"],
)

load("@aspect_bazel_lib//lib:expand_template.bzl", "expand_template")

expand_template(
    name = "tags",
    template = ["0.0.0"],
    substitutions = {
        "0.0.0": "$(container_tag)",
    },
)

expand_template(
    name = "repository",
    template = ["repository"],
    substitutions = {
            "repository": "$(container_prefix)/$(push_target)",
    }
)

oci_push(
    name = "push-cdi-operator",
    remote_tags = ":tags",
    image = "//cmd/cdi-operator:cdi-operator-image",
    repository_file = ":repository",
)

oci_push(
    name = "push-cdi-controller",
    remote_tags = ":tags",
    image = "//cmd/cdi-controller:cdi-controller-image",
    repository_file = ":repository",
)

oci_push(
    name = "push-cdi-apiserver",
    remote_tags = ":tags",
    image = "//cmd/cdi-apiserver:cdi-apiserver-image",
    repository_file = ":repository",
)

oci_push(
    name = "push-cdi-cloner",
    remote_tags = ":tags",
    image = "//cmd/cdi-cloner:cdi-cloner-image",
    repository_file = ":repository",
)

oci_push(
    name = "push-cdi-importer",
    remote_tags = ":tags",
    image = "//cmd/cdi-importer:cdi-importer-image",
    repository_file = ":repository",
)

oci_push(
    name = "push-cdi-uploadproxy",
    remote_tags = ":tags",
    image = "//cmd/cdi-uploadproxy:cdi-uploadproxy-image",
    repository_file = ":repository",
)

oci_push(
    name = "push-cdi-uploadserver",
    remote_tags = ":tags",
    image = "//cmd/cdi-uploadserver:cdi-uploadserver-image",
    repository_file = ":repository",
)

oci_push(
    name = "push-vcenter-simulator",
    remote_tags = ":tags",
    image = "//tools/vddk-test:vcenter-simulator-image",
    repository_file = ":repository",
)

oci_push(
    name = "push-cdi-func-test-bad-webserver",
    remote_tags = ":tags",
    image = "//tools/cdi-func-test-bad-webserver:cdi-func-test-bad-webserver-image",
    repository_file = ":repository",
)

oci_push(
    name = "push-cdi-func-test-proxy",
    remote_tags = ":tags",
    image = "//tools/cdi-func-test-proxy:cdi-func-test-proxy-image",
    repository_file = ":repository",
)

oci_push(
    name = "push-cdi-func-test-sample-populator",
    remote_tags = ":tags",
    image = "//tools/cdi-func-test-sample-populator:cdi-func-test-sample-populator-image",
    repository_file = ":repository",
)

oci_push(
    name = "push-cdi-func-test-file-host-init",
    remote_tags = ":tags",
    image = "//tools/cdi-func-test-file-host-init:cdi-func-test-file-host-init-image",
    repository_file = ":repository",
)

oci_push(
    name = "push-cdi-func-test-file-host-http",
    remote_tags = ":tags",
    image = "//tools/cdi-func-test-file-host-init:cdi-func-test-file-host-http-image",
    repository_file = ":repository",
)

oci_push(
    name = "push-cdi-func-test-registry-init",
    remote_tags = ":tags",
    image = "//tools/cdi-func-test-registry-init:cdi-func-test-registry-init-image",
    repository_file = ":repository",
)

oci_push(
    name = "push-cdi-func-test-registry-populate",
    remote_tags = ":tags",
    image = "//tools/cdi-func-test-registry-init:cdi-func-test-registry-populate-image",
    repository_file = ":repository",
)

oci_push(
    name = "push-cdi-func-test-registry",
    remote_tags = ":tags",
    image = "//tools/cdi-func-test-registry-init:cdi-func-test-registry-image",
    repository_file = ":repository",
)

oci_push(
    name = "push-cdi-func-test-tinycore",
    remote_tags = ":tags",
    image = "//tests:cdi-func-test-tinycore",
    repository_file = ":repository",
)

oci_push(
    name = "push-cdi-func-test-cirros-qcow2",
    remote_tags = ":tags",
    image = "//tests:cdi-func-test-cirros-qcow2",
    repository_file = ":repository",
)

oci_push(
    name = "push-imageio-init",
    remote_tags = ":tags",
    image = "//tools/imageio-init:imageio-init-image",
    repository_file = ":repository",
)

oci_push(
    name = "push-cdi-func-test-imageio",
    remote_tags = ":tags",
    image = "//tools/image-io:cdi-func-test-imageio-image",
    repository_file = ":repository",
)

oci_push(
    name = "push-vddk-init",
    remote_tags = ":tags",
    image = "//tools/vddk-init:vddk-init-image",
    repository_file = ":repository",
)

oci_push(
    name = "push-vddk-test",
    remote_tags = ":tags",
    image = "//tools/vddk-test:vddk-test-image",
    repository_file = ":repository",
)

filegroup(
    name = "test-images",
    srcs = [
        "//tests:images/tinyCore.iso",
        "//tests:images/tinyCore.vdi",
        "//tests:images/archive.tar",
        "//tests:images/cirros-qcow2.img",
        "//tests:images/cirros.raw",
	"//tests:images/cirros-large-virtual-size.raw.xz",
	"//tests:images/cirros-large-virtual-size.qcow2",
	"//tests:images/cirros-large-physical-size.raw.xz",
	"//tests:images/cirros-large-physical-size.qcow2",
	"//tests:images/cirros-snapshot1.qcow2",
	"//tests:images/cirros-snapshot2.qcow2",
    ],
    visibility = ["//visibility:public"],
)

filegroup(
    name = "test-invalid-images",
    srcs = [
        "//tests:images/invalid_qcow_images/invalid-qcow-large-memory.img",
    ],
    visibility = ["//visibility:public"],
)

oci_image(
    name = "testimage_base",
    architecture = select({
        "@io_bazel_rules_go//go/platform:linux_s390x": "s390x",
        "@io_bazel_rules_go//go/platform:linux_arm64": "arm64",
        "//conditions:default": "amd64",
    }),
    os = "linux",
    tars = select({
        "@io_bazel_rules_go//go/platform:linux_s390x": [
            "//rpm:testimage_s390x",
        ],
        "@io_bazel_rules_go//go/platform:linux_arm64": [
            "//rpm:testimage_aarch64",
        ],
        "//conditions:default": [
            "//rpm:testimage_x86_64",
        ],
    }),
    visibility = ["//visibility:public"],
)

oci_image(
    name = "centos_base",
    architecture = select({
        "@io_bazel_rules_go//go/platform:linux_s390x": "s390x",
        "@io_bazel_rules_go//go/platform:linux_arm64": "arm64",
        "//conditions:default": "amd64",
    }),
    os = "linux",
    tars = select({
        "@io_bazel_rules_go//go/platform:linux_s390x": [
            "//rpm:centos_base_s390x",
        ],
        "@io_bazel_rules_go//go/platform:linux_arm64": [
            "//rpm:centos_base_aarch64",
        ],
        "//conditions:default": [
            "//rpm:centos_base_x86_64",
        ],
    }),
    visibility = ["//visibility:public"],
)

genrule(
    name = "ca_anchors",
    outs = ["tls-ca-bundle.pem"],
    cmd = "/usr/bin/p11-kit extract --format=pem-bundle --filter=ca-anchors --overwrite --comment --purpose server-auth $@",
)

genrule(
    name = "build-ginkgo",
    srcs = [
        "//vendor/github.com/onsi/ginkgo/v2/ginkgo",
    ],
    outs = ["ginkgo-copier"],
    cmd = "echo '#!/bin/sh\n\ncp -f $(SRCS) $$1' > \"$@\"",
    executable = 1,
)

pkg_tar(
    name = "ca_anchors_tar",
    srcs = [":ca_anchors"],
    package_dir = "/etc/pki/ca-trust/extracted/pem",
    visibility = ["//visibility:public"],
)
