load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = ["utils.go"],
    importpath = "kubevirt.io/containerized-data-importer/tests",
    visibility = ["//visibility:public"],
    deps = [
        "//tests/framework:go_default_library",
        "//vendor/github.com/onsi/ginkgo:go_default_library",
        "//vendor/k8s.io/api/core/v1:go_default_library",
        "//vendor/k8s.io/apimachinery/pkg/apis/meta/v1:go_default_library",
        "//vendor/kubevirt.io/controller-lifecycle-operator-sdk/pkg/sdk/api:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = [
        "alpha_test.go",
        "api_validation_test.go",
        "badserver_test.go",
        "basic_sanity_test.go",
        "cdiconfig_test.go",
        "certrotation_test.go",
        "cloner_test.go",
        "datavolume_test.go",
        "explain_test.go",
        "import_test.go",
        "leaderelection_test.go",
        "local_volume_test.go",
        "operator_test.go",
        "rbac_test.go",
        "smartclone_test.go",
        "tests_suite_test.go",
        "transport_test.go",
        "upload_test.go",
        "webhook_test.go",
    ],
    embed = [":go_default_library"],
    deps = [
        "//pkg/apis/core/v1alpha1:go_default_library",
        "//pkg/apis/core/v1beta1:go_default_library",
        "//pkg/client/clientset/versioned:go_default_library",
        "//pkg/clone:go_default_library",
        "//pkg/common:go_default_library",
        "//pkg/controller:go_default_library",
        "//pkg/feature-gates:go_default_library",
        "//pkg/util/naming:go_default_library",
        "//tests/framework:go_default_library",
        "//tests/reporters:go_default_library",
        "//tests/utils:go_default_library",
        "//vendor/github.com/coreos/go-semver/semver:go_default_library",
        "//vendor/github.com/ghodss/yaml:go_default_library",
        "//vendor/github.com/google/uuid:go_default_library",
        "//vendor/github.com/onsi/ginkgo:go_default_library",
        "//vendor/github.com/onsi/ginkgo/extensions/table:go_default_library",
        "//vendor/github.com/onsi/gomega:go_default_library",
        "//vendor/github.com/openshift/api/route/v1:go_default_library",
        "//vendor/github.com/openshift/client-go/route/clientset/versioned:go_default_library",
        "//vendor/github.com/openshift/client-go/security/clientset/versioned:go_default_library",
        "//vendor/github.com/openshift/custom-resource-status/conditions/v1:go_default_library",
        "//vendor/k8s.io/api/apps/v1:go_default_library",
        "//vendor/k8s.io/api/authorization/v1:go_default_library",
        "//vendor/k8s.io/api/core/v1:go_default_library",
        "//vendor/k8s.io/api/extensions/v1beta1:go_default_library",
        "//vendor/k8s.io/api/rbac/v1:go_default_library",
        "//vendor/k8s.io/api/storage/v1:go_default_library",
        "//vendor/k8s.io/apiextensions-apiserver/pkg/apis/apiextensions/v1:go_default_library",
        "//vendor/k8s.io/apimachinery/pkg/api/errors:go_default_library",
        "//vendor/k8s.io/apimachinery/pkg/apis/meta/v1:go_default_library",
        "//vendor/k8s.io/apimachinery/pkg/labels:go_default_library",
        "//vendor/k8s.io/apimachinery/pkg/util/intstr:go_default_library",
        "//vendor/k8s.io/client-go/kubernetes:go_default_library",
        "//vendor/k8s.io/client-go/tools/clientcmd:go_default_library",
        "//vendor/kubevirt.io/controller-lifecycle-operator-sdk/pkg/sdk:go_default_library",
        "//vendor/kubevirt.io/controller-lifecycle-operator-sdk/pkg/sdk/api:go_default_library",
    ],
)

exports_files(
    [
        "images/tinyCore.iso",
        "images/archive.tar",
        "images/cirros-qcow2.img",
        "images/cirros.raw",
        "images/invalid_qcow_images/invalid-qcow-backing-file.img",
        "images/invalid_qcow_images/invalid-qcow-large-json.img",
        "images/invalid_qcow_images/invalid-qcow-large-memory.img",
        "images/invalid_qcow_images/invalid-qcow-large-size.img",
    ],
)
