load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["apiserver.go"],
    importpath = "kubevirt.io/containerized-data-importer/cmd/cdi-apiserver",
    visibility = ["//visibility:private"],
    deps = [
        "//pkg/apiserver:go_default_library",
        "//pkg/client/clientset/versioned:go_default_library",
        "//pkg/util/cert/watcher:go_default_library",
        "//pkg/version/verflag:go_default_library",
        "//vendor/github.com/pkg/errors:go_default_library",
        "//vendor/k8s.io/client-go/kubernetes:go_default_library",
        "//vendor/k8s.io/client-go/tools/clientcmd:go_default_library",
        "//vendor/k8s.io/klog/v2:go_default_library",
        "//vendor/k8s.io/kube-aggregator/pkg/client/clientset_generated/clientset:go_default_library",
        "//vendor/sigs.k8s.io/controller-runtime/pkg/manager/signals:go_default_library",
    ],
)

go_binary(
    name = "cdi-apiserver",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)

load(
    "@io_bazel_rules_docker//container:container.bzl",
    "container_image",
)

container_image(
    name = "cdi-apiserver-image",
    base = "@fedora//image",
    directory = "/usr/bin",
    entrypoint = [
        "/usr/bin/cdi-apiserver",
        "-alsologtostderr",
    ],
    files = [":cdi-apiserver"],
    visibility = ["//visibility:public"],
    user = "1001",
    workdir = "/home/cdi-apiserver",
)
