load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
load("@rules_oci//oci:defs.bzl", "oci_image")
load("@rules_pkg//:pkg.bzl", "pkg_tar")
load("//pkg/version:def.bzl", "version_x_defs")

go_library(
    name = "go_default_library",
    srcs = ["apiserver.go"],
    importpath = "kubevirt.io/containerized-data-importer/cmd/cdi-apiserver",
    visibility = ["//visibility:private"],
    deps = [
        "//pkg/apiserver:go_default_library",
        "//pkg/client/clientset/versioned:go_default_library",
        "//pkg/common:go_default_library",
        "//pkg/controller/datavolume:go_default_library",
        "//pkg/util/cert/watcher:go_default_library",
        "//pkg/util/tls-crypto-watch:go_default_library",
        "//pkg/version/verflag:go_default_library",
        "//staging/src/kubevirt.io/containerized-data-importer-api/pkg/apis/core/v1beta1:go_default_library",
        "//vendor/github.com/kelseyhightower/envconfig:go_default_library",
        "//vendor/github.com/kubernetes-csi/external-snapshotter/client/v6/apis/volumesnapshot/v1:go_default_library",
        "//vendor/github.com/kubernetes-csi/external-snapshotter/client/v6/clientset/versioned:go_default_library",
        "//vendor/github.com/pkg/errors:go_default_library",
        "//vendor/k8s.io/api/core/v1:go_default_library",
        "//vendor/k8s.io/api/storage/v1:go_default_library",
        "//vendor/k8s.io/apimachinery/pkg/apis/meta/v1:go_default_library",
        "//vendor/k8s.io/apimachinery/pkg/util/runtime:go_default_library",
        "//vendor/k8s.io/client-go/kubernetes:go_default_library",
        "//vendor/k8s.io/client-go/kubernetes/scheme:go_default_library",
        "//vendor/k8s.io/client-go/tools/clientcmd:go_default_library",
        "//vendor/k8s.io/klog/v2:go_default_library",
        "//vendor/k8s.io/kube-aggregator/pkg/client/clientset_generated/clientset:go_default_library",
        "//vendor/sigs.k8s.io/controller-runtime/pkg/cache:go_default_library",
        "//vendor/sigs.k8s.io/controller-runtime/pkg/client:go_default_library",
        "//vendor/sigs.k8s.io/controller-runtime/pkg/manager/signals:go_default_library",
    ],
)

go_binary(
    name = "cdi-apiserver",
    embed = [":go_default_library"],
    visibility = ["//visibility:private"],
    x_defs = version_x_defs(),
)

pkg_tar(
    name = "cdi-apiserver-bin",
    srcs = [":cdi-apiserver"],
    extension = "tar.gz",
    package_dir = "/usr/bin/",
    visibility = ["//visibility:private"],
)

oci_image(
    name = "cdi-apiserver-image",
    base = "//:centos_base",
    entrypoint = [
        "/usr/bin/cdi-apiserver",
        "-alsologtostderr",
    ],
    tars = [":cdi-apiserver-bin"],
    user = "1001",
    visibility = ["//visibility:public"],
    workdir = "/home/cdi-apiserver",
)
